--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>oceanvitas</title>
+  <title>hello world!</title>
 </head>
 <body>
-  <h2>index</h2>
+  <h2>hello oceanvitas!</h2>
 </body>
 </html>
