--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>hello world!</title>
-</head>
-<body>
-  <h2>hello oceanvitas!</h2>
-  <p>2018</p>
-</body>
-</html>
+---
+layout: default 　　title: 我的Blog
+---
+
+<h2>{{ page.title }}</h2>
+
+<p>最新文章</p>
+
+<ul>
+
+  {% for post in site.posts %}
+
+  <li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+
+  {% endfor %}
+
+</ul>
