--- a/jekyll_demo/_posts/2018-09-13-hello-world.html
+++ b/jekyll_demo/_posts/2018-09-13-hello-world.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: 你好，世界
+comments: true
 ---
 
 <h2>{{ page.title }}</h2>
@@ -8,3 +9,5 @@ title: 你好，世界
 <p>我的第一篇文章</p>
 
 <p>{{ page.date | date_to_string }}</p>
+
+{% include comments.html %}
