--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: default 　　
 title: 我的Blog
-comments: true
 ---
 
 <h2>{{ page.title }}</h2>
@@ -12,7 +11,7 @@ comments: true
 
   {% for post in site.posts %}
 
-  <li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+  <li>{{ post.date | date_to_string }} <a href="{{ post.url }}">{{ post.title }}</a></li>
 
   {% endfor %}
 
